# robo_naila

./: .clang-format  .env.example  .gitignore  README.md
ai-server/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
ai-server/config/: mqtt_config.py
ai-server/mqtt/: client.py  pub.py  sub.py
docs/: ARCHITECTURE.md  FLOW.md  SETUP.md
firmware/: .gitignore  CMakeLists.txt  README.md
firmware/components/wifi/: CMakeLists.txt  manager.c
firmware/components/wifi/include/: manager.h
firmware/main/: CMakeLists.txt  config.h  main.c  main.cpp
firmware/scripts/: build.sh  flash.sh  format.sh  setenv.sh
server/: README.md  pyproject.toml  requirements.txt
